Async editor (#26)
* Starting new CodeEditor.

* Starting new indexing.

* Add EditorIndex subclasses.

* Add more indexing elements.

* Start ProjectGlobalIndex.

* Finishing ProjectGlobalIndex.

* Start new async editor styling.

* Add style system base.

* Add IndexEvents.

* Add EditorIndexStyleableElement.

* Add inspection.

* Start basic indexing elements.

* Start new MIPS async editor.

* MIPSFileEditor compiling.

* Autocompletion opens now.

* Add fully instruction support.

* Add label tab remover.

* Fix bug on MIPSEditorInstructionParameter parser with hint.

* Add editor macro support.

* Add globl directive editor support. Improved EditorLineIndex lock system.

* Starting new inspection system

* Starting inspection checks.

* Add inspections.

* Number line now extends to the bottom of the editor.

* Number line now extends to the bottom of the editor.

* Add more inspectors.

* Add MIPSInstructionNotFoundInspection.

* Move LabelElement to an interface.

* Add all other inspectors.

* Working autocompletion popup.

* Add .lab support.

* Add ElementScope.

* Add line inspection on macro add/remove.

* Add more macro inspections.

* FileCollectionRemoveFileEvent.After is now called.

* Add macro parameter support.

* Fix macro autocompletion popup. Change macro parameter color.

* Documentation popup now working.

* Fix horizontal scrollbar size.

* Fix horizontal scrollbar size.

* Add MIPSInspectorManager. Document EditorIndex.

* Document more editor files.

* Update to Java 17. Fix some graphical bugs.

* Update gradle to 7.2.

* Document more index code.

* Document scopes and file collection events.

* Fixed typo in previous commit.

* New editor fully documented.